Bug #47426: Parser.cpp won't parse "x=c:\windows"   . now finds first of ':' or '=' for the split